# human-capture

./: .gitignore  Dockerfile  README.md  alembic.ini  config.py  database.db  docker-compose.yml  main.py  pyproject.toml  settings.json
app/: config.py  dao.py  database.py  detector.py  exceptions.py  lifespan.py  main.py  models.py  schemas.py
app/api/: camera.py  events.py  photos.py
app/core/: config.py  lifespan.py  logging_config.py
app/dao/: base.py  dao.py  detector.py
app/database/: core.py
app/db/: base.py
app/migrations/: env.py
app/migrations/versions/: 347d00318b56_create_detections_table.py  4e3b8ce5f3d0_create_index_on_timestamp.py
app/models/: detector.py
app/repositories/: base.py  detector.py  sqlalchemy_repository.py
app/routers/: camera.py  events.py  photos.py  static.py
app/services/: detector.py
app/services/detectors/: __init__.py  base.py  camera_manager.py  detection_saver.py  face_detector.py  frame_processor.py
static/: index.html
