[project]
name = "human-capture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.6"
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]
